# wifi-v-distance-strength-testing

./: .gitignore  LICENSE  Makefile  README.md  export_charts.sh  export_notebook.sh  index.md  pyproject.toml
data_files/: WiFi Strength Vs Distance - 2.4GHz.csv  WiFi Strength Vs Distance - 5GHz.csv
docs/: index.html
tools/: markdown_to_html.py
visualizations/: graph.ipynb
